--- a/src/App.css
+++ b/src/App.css
@@ -345,3 +345,17 @@ a.pure-button-secondary
   margin: 0.5rem;
   
 }
+
+.CityMapParam label
+ {
+  font-size: 1.1em;
+   margin-left: 0.3rem;
+   margin-right: 0.3rem;
+ }
+
+ .CityMapParam input[type="number"]
+ {
+  width:7em;
+  margin-left:0.2rem;
+  margin-right:0.2rem;
+ }
