--- a/src/App.css
+++ b/src/App.css
@@ -359,3 +359,11 @@ a.pure-button-secondary
   margin-left:0.2rem;
   margin-right:0.2rem;
  }
+ .transportguide
+ {
+    user-select:text;
+    max-height: 25rem;
+    overflow:auto;
+    width:100%;
+    
+ }
