--- a/src/App.css
+++ b/src/App.css
@@ -164,11 +164,23 @@
  max-width: 100%;
 
 }
+fieldset
+{
+  border:0;
+}
 fieldset > legend
 {
+  display: block;
+  width: 100%;
+  padding: 0.3em 0;
+  margin-bottom: 0.3em;
+  border-bottom: 1px solid white;
+  
   font-size: 1.1em;
   font-weight: bolder;
   color:black !important;
+  
+  
 }
 fieldset > p
 {
